@@ -1,339 +1,141 @@
-def testCategories = [
-    "Cassandra", "CosmosDb", "Couchbase", "CouchDb",
-    "Ehcache", "FileSystem", "Ignite", "InfluxDb",
-    "Ldap", "Mail", "MariaDb", "Memcached", "JDBC",
-    "MongoDb", "MsSqlServer", "MySQL", "Postgres", "Redis",
-    "Radius", "AmazonWebServices", "RestfulApi", "Groovy",
-    "OAuth", "OIDC", "SAML", "UMA", "Oracle", "JMS",
-    "ZooKeeper", "Webflow", "DynamoDb", "MFA", "Kafka"
-] as String[]
+enum TestCategories {
+    Kafka,
+    Logout,
+    CAS,
+    ExpirationPolicy,
+    Metrics,
+    Tickets,
+    PasswordOps,
+    Attributes,
+    Audits,
+    Web,
+    Infinispan,
+    Spnego,
+    WebApp,
+    Authentication,
+    ActuatorEndpoint,
+    RegisteredService,
+    Utility,
+    WSFederation,
+    SMS,
+    CasConfiguration,
+    Hazelcast,
+    JMX,
+    Simple,
+    MFA,
+    X509,
+    SHELL,
+    Cassandra,
+    Webflow,
+    WebflowConfig,
+    WebflowEvents,
+    WebflowActions,
+    WebflowMfaActions,
+    CosmosDb,
+    ZooKeeper,
+    JMS,
+    AmazonWebServices,
+    Radius,
+    Couchbase,
+    CouchDb,
+    MySQL,
+    Postgres,
+    MsSqlServer,
+    MariaDb,
+    DynamoDb,
+    Ehcache,
+    FileSystem,
+    Ignite,
+    InfluxDb,
+    Oracle,
+    Ldap,
+    Groovy,
+    Mail,
+    RestfulApi,
+    Memcached,
+    MongoDb,
+    Redis,
+    OAuth,
+    UMA,
+    OIDC,
+    SAML,
+    JDBC
+}
 
-if (hasTestsOfCategory(project, "Kafka")) {
-    task testKafka(type: Test) {
-        enabled = shouldTest(project, "Kafka")
-        useJUnitPlatform {
-            includeTags "Kafka"
+if (rootProject.tasks.findByName("testCategories") == null) {
+    rootProject.tasks.create(name: "testCategories", description: "Display all available test categories") {
+        doLast {
+            def result = TestCategories.values()
+                    .toSorted({ o1, o2 ->
+                        o1.name().compareTo(o2.name())
+                    })
+                    .collect { it.name().toLowerCase() }
+            println(groovy.json.JsonOutput.toJson(result))
         }
     }
 }
 
-if (hasTestsOfCategory(project, "MFA")) {
-    task testMFA(type: Test) {
-        enabled = shouldTest(project, "MFA")
-        useJUnitPlatform {
-            includeTags "MFA"
+TestCategories.values().each({ category ->
+    if (hasTestsOfCategory(project, category.name())) {
+        def taskName = "test${category.name()}"
+        if (tasks.findByName(taskName) == null) {
+            // println "Creating task ${taskName} for ${project.name}"
+            tasks.create(name: taskName, type: Test, description: "Testing category ${category.name()}") {
+                enabled = shouldTest(project, category.name())
+                //finalizedBy jacocoTestReport
+                useJUnitPlatform {
+                    includeTags category.name()
+                }
+            }
         }
     }
-}
-
-if (hasTestsOfCategory(project, "Cassandra")) {
-    task testCassandra(type: Test) {
-        enabled = shouldTest(project, "Cassandra")
-        useJUnitPlatform {
-            includeTags "Cassandra"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Webflow")) {
-    task testWebflow(type: Test) {
-        enabled = shouldTest(project, "Webflow")
-        useJUnitPlatform {
-            includeTags "Webflow"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "CosmosDb")) {
-    task testCosmosDb(type: Test) {
-        enabled = shouldTest(project, "CosmosDb")
-        useJUnitPlatform {
-            includeTags "CosmosDb"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "ZooKeeper")) {
-    task testZooKeeper(type: Test) {
-        enabled = shouldTest(project, "ZooKeeper")
-        useJUnitPlatform {
-            includeTags "ZooKeeper"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "JMS")) {
-    task testJMS(type: Test) {
-        enabled = shouldTest(project, "JMS")
-        useJUnitPlatform {
-            includeTags "JMS"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "AmazonWebServices")) {
-    task testAWS(type: Test) {
-        enabled = shouldTest(project, "AmazonWebServices")
-        useJUnitPlatform {
-            includeTags "AmazonWebServices"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Radius")) {
-    task testRadius(type: Test) {
-        enabled = shouldTest(project, "Radius")
-        useJUnitPlatform {
-            includeTags "Radius"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Couchbase")) {
-    task testCouchbase(type: Test) {
-        enabled = shouldTest(project, "Couchbase")
-        useJUnitPlatform {
-            includeTags "Couchbase"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "CouchDb")) {
-    task testCouchDb(type: Test) {
-        enabled = shouldTest(project, "CouchDb")
-        useJUnitPlatform {
-            includeTags "CouchDb"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "MySQL")) {
-    task testMySQL(type: Test) {
-        enabled = shouldTest(project, "MySQL")
-        useJUnitPlatform {
-            includeTags "MySQL"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Postgres")) {
-    task testPostgres(type: Test) {
-        enabled = shouldTest(project, "Postgres")
-        useJUnitPlatform {
-            includeTags "Postgres"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "MsSqlServer")) {
-    task testMsSqlServer(type: Test) {
-        enabled = shouldTest(project, "MsSqlServer")
-        useJUnitPlatform {
-            includeTags "MsSqlServer"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "MariaDb")) {
-    task testMariaDb(type: Test) {
-        enabled = shouldTest(project, "MariaDb")
-        useJUnitPlatform {
-            includeTags "MariaDb"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "DynamoDb")) {
-    task testDynamoDb(type: Test) {
-        enabled = shouldTest(project, "DynamoDb")
-        useJUnitPlatform {
-            includeTags "DynamoDb"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Ehcache")) {
-    task testEhcache(type: Test) {
-        enabled = shouldTest(project, "Ehcache")
-        useJUnitPlatform {
-            includeTags "Ehcache"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "FileSystem")) {
-    task testFileSystem(type: Test) {
-        enabled = shouldTest(project, "FileSystem")
-        useJUnitPlatform {
-            includeTags "FileSystem"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Ignite")) {
-    task testIgnite(type: Test) {
-        enabled = shouldTest(project, "Ignite")
-        useJUnitPlatform {
-            includeTags "Ignite"
-        }
-        def list = []
-        list.add("--add-exports")
-        list.add("java.base/jdk.internal.misc=ALL-UNNAMED")
-        list.add("--add-exports")
-        list.add("java.base/sun.nio.ch=ALL-UNNAMED")
-        jvmArgs = list
-    }
-}
-
-if (hasTestsOfCategory(project, "InfluxDb")) {
-    task testInfluxDb(type: Test) {
-        enabled = shouldTest(project, "InfluxDb")
-        useJUnitPlatform {
-            includeTags "InfluxDb"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Oracle")) {
-    task testOracle(type: Test) {
-        enabled = shouldTest(project, "Oracle")
-        useJUnitPlatform {
-            includeTags "Oracle"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Ldap")) {
-    task testLdap(type: Test) {
-        enabled = shouldTest(project, "Ldap")
-        useJUnitPlatform {
-            includeTags "Ldap"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Groovy")) {
-    task testGroovy(type: Test) {
-        enabled = shouldTest(project, "Groovy")
-        useJUnitPlatform {
-            includeTags "Groovy"
-        }
-    }
-}
-
-
-if (hasTestsOfCategory(project, "Mail")) {
-    task testMail(type: Test) {
-        enabled = shouldTest(project, "Mail")
-        useJUnitPlatform {
-            includeTags "Mail"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "RestfulApi")) {
-    task testRestful(type: Test) {
-        enabled = shouldTest(project, "RestfulApi")
-        useJUnitPlatform {
-            includeTags "RestfulApi"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Memcached")) {
-    task testMemcached(type: Test) {
-        enabled = shouldTest(project, "Memcached")
-        useJUnitPlatform {
-            includeTags "Memcached"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "MongoDb")) {
-    task testMongoDb(type: Test) {
-        enabled = shouldTest(project, "MongoDb")
-        useJUnitPlatform {
-            includeTags "MongoDb"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "Redis")) {
-    task testRedis(type: Test) {
-        enabled = shouldTest(project, "Redis")
-        useJUnitPlatform {
-            includeTags "Redis"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "OAuth")) {
-    task testOAuth(type: Test) {
-        enabled = shouldTest(project, "OAuth")
-        useJUnitPlatform {
-            includeTags "OAuth"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "UMA")) {
-    task testUma(type: Test) {
-        enabled = shouldTest(project, "UMA")
-        useJUnitPlatform {
-            includeTags "UMA"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "OIDC")) {
-    task testOIDC(type: Test) {
-        enabled = shouldTest(project, "OIDC")
-        useJUnitPlatform {
-            includeTags "OIDC"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "SAML")) {
-    task testSAML(type: Test) {
-        enabled = shouldTest(project, "SAML")
-        useJUnitPlatform {
-            includeTags "SAML"
-        }
-    }
-}
-
-if (hasTestsOfCategory(project, "JDBC")) {
-    task testJDBC(type: Test) {
-        enabled = shouldTest(project, "JDBC")
-        useJUnitPlatform {
-            includeTags "JDBC"
-        }
-    }
-}
+})
 
 test {
-    useJUnitPlatform {
-        excludeTags testCategories
+    enabled = false
+    onlyIf = {
+        false
     }
-    enabled = rootProject.testCategoryType != null && rootProject.testCategoryType.toLowerCase().contains("simple") && !Boolean.getBoolean("skipTests")
 }
 
 tasks.withType(Test) {
     scanForTestClasses = false
     ignoreFailures = Boolean.getBoolean("ignoreTestFailures")
-
+    forkEvery = 1000
     doFirst {
-        maxParallelForks = project.ext.properties.get("maxParallelForksForTests", 4)
+        maxParallelForks = project.ext.properties.get("maxParallelForksForTests", 2)
         if (maxParallelForks != 2) {
             logger.info "Maximum number of parallel forks is set to ${maxParallelForks}"
         }
     }
+    if (System.getenv().containsKey("CI")) {
+        outputs.upToDateWhen { false }
+    }
     systemProperty("spring.main.banner-mode", "off")
+//    systemProperty("spring.main.lazy-initialization", "true")
     systemProperty("CI", System.getProperty("CI"))
 
     failFast = true
-    jvmArgs.addAll(["-Xms512m", "-Xmx4g"])
+
+    def list = []
+    list.add("--add-modules")
+    list.add("java.se")
+    list.add("--add-exports")
+    list.add("java.base/jdk.internal.ref=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.lang=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.nio=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/sun.nio.ch=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.management/sun.management=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
+    list.add("-Xms512m")
+    list.add("-Xmx4g")
+    jvmArgs = list
+
     classpath = it.classpath + files("${projectDir}/src/main/resources") + files("${projectDir}/src/test/resources")
     testLogging {
         events = ["FAILED", "STANDARD_OUT"]
@@ -341,6 +143,28 @@ tasks.withType(Test) {
         showStandardStreams = Boolean.getBoolean("showStandardStreams")
         showExceptions = true
         showCauses = true
+        beforeSuite { desc ->
+            if (!desc.parent) {
+                println "Started running test suite [${desc.displayName}] @ ${new java.util.Date()} "
+            }
+        }
+        beforeTest { desc ->
+            println "Started running test [${desc.className}:${desc.displayName}] @ ${new java.util.Date()} "
+        }
+        afterTest { desc, result ->
+            println """
+Results for test [${desc.className}:${desc.displayName}]: ${result.resultType} @ ${new java.util.Date()} 
+(${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)
+"""
+        }
+        afterSuite { desc, result ->
+            if (!desc.parent) {
+                println """
+Results for test suite [${desc.displayName}]: ${result.resultType} @ ${new java.util.Date()} 
+(${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)
+"""
+            }
+        }
     }
     if (!Boolean.getBoolean("skipTestRetry")) {
         retry {
@@ -349,10 +173,18 @@ tasks.withType(Test) {
             failOnPassedAfterRetry = false
         }
     }
+    jacoco {
+        dumpOnExit = true
+        excludes = rootProject.excludedFilesFromTestCoverage
+    }
 }
 
 def shouldTest(Project project, String category) {
-    !Boolean.getBoolean("skipTests") && rootProject.testCategoryType != null && rootProject.testCategoryType.toLowerCase().contains(category.toLowerCase()) && hasTestsOfCategory(project, category)
+    def foundTest = gradle.startParameter.taskNames.any { task -> task.matches(/^test${category}$/) }
+    if (!foundTest) {
+        logger.debug "No tests with category ${category} found for ${project.name}"
+    }
+    return !Boolean.getBoolean("skipTests") && foundTest && hasTestsOfCategory(project, category)
 }
 
 def hasTestsOfCategory(Project project, String category) {
